<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/limegreen"
    tools:context=".CoinDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/tv_asset_id"
        android:layout_width="46dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <ImageView
        android:id="@+id/coin_details_favourite_star"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_price_usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_price_usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price_usd"
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_rmv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/valor_padrao"/>

    <Button
        android:id="@+id/btn_add_rmv"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/limegreen"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_rmv"
        app:layout_constraintVertical_bias="1.0"
        android:background="@color/black"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:fontFamily="@font/cabin"
            android:text="@string/string_volumes_negociados"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/cabin"
            android:textColor="@color/white"
            android:text="@string/string_ultima_hora"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/string_ultimo_dia"
            android:fontFamily="@font/cabin"
            android:textColor="@color/white"
            android:textSize="20sp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/cabin"
            android:text="@string/string_ultimo_mes"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_last_hour_transaction"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/valor_padrao"/>

        <TextView
            android:id="@+id/tv_last_day_transaction"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/valor_padrao"/>

        <TextView
            android:id="@+id/tv_last_month_transaction"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/valor_padrao"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>